// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`column watch default index 1`] = `
<div class="van-picker-column">
  <ul style="line-height: 50px;">
    <li class="van-ellipsis van-picker-column__item van-picker-column__item--disabled">1</li>
    <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected">1990</li>
    <li class="van-ellipsis van-picker-column__item">1991</li>
    <li class="van-ellipsis van-picker-column__item">1992</li>
    <li class="van-ellipsis van-picker-column__item">1993</li>
    <li class="van-ellipsis van-picker-column__item">1994</li>
    <li class="van-ellipsis van-picker-column__item">1995</li>
  </ul>
</div>
`;

exports[`column watch default index 2`] = `
<div class="van-picker-column">
  <ul style="line-height: 50px;">
    <li class="van-ellipsis van-picker-column__item van-picker-column__item--disabled">1</li>
    <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected">1990</li>
    <li class="van-ellipsis van-picker-column__item">1991</li>
    <li class="van-ellipsis van-picker-column__item">1992</li>
    <li class="van-ellipsis van-picker-column__item">1993</li>
    <li class="van-ellipsis van-picker-column__item">1994</li>
    <li class="van-ellipsis van-picker-column__item">1995</li>
  </ul>
</div>
`;

exports[`column watch default index 3`] = `
<div class="van-picker-column">
  <ul style="line-height: 50px;">
    <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected">1</li>
    <li class="van-ellipsis van-picker-column__item van-picker-column__item--disabled">1</li>
    <li class="van-ellipsis van-picker-column__item van-picker-column__item--disabled">1</li>
    <li class="van-ellipsis van-picker-column__item van-picker-column__item--disabled">1</li>
  </ul>
</div>
`;
